--- a/index.html
+++ b/index.html
@@ -32,3 +32,50 @@
         }
         footer {
             background-color: #f0f0f0;
+            padding: 10px;
+            text-align: center;
+        }
+    </style>
+    <script>
+        function validateForm() {
+            var name = document.getElementById("name").value;
+            var email = document.getElementById("email").value;
+            var message = document.getElementById("message").value;
+            if (name == "" || email == "" || message == "") {
+                alert("Please fill out all fields.");
+                return false;
+            }
+            return true;
+        }
+    </script>
+</head>
+<body>
+    <header>
+        <h1>Transport Website</h1>
+        <button>Home</button>
+        <button>Products</button>
+        <button>Contact</button>
+    </header>
+    <div class="container">
+        <div class="product">
+            <img src="apple_product.jpg" alt="Apple Product">
+            <h2>Apple Product</h2>
+            <p>Description of Apple Product</p>
+        </div>
+        <!-- Add more product divs here -->
+    </div>
+    <footer>
+        <p>&copy; 2022 Transport Website. All rights reserved.</p>
+        <form onsubmit="return validateForm()">
+            <h2>Contact Us</h2>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required><br>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea><br>
+            <input type="submit" value="Submit">
+        </form>
+    </footer>
+</body>
+</html>
